--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/>
         <!-- Open Sans Font -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"/>
+
     </head>
 
     <body
@@ -36,19 +37,19 @@
 
                 <!-- primary nav -->
                 <div class="hidden lg:flex items-center space-x-10">
-                    <a href="" class="text-[17px] text-pink-500 border-b-2 border-pink-500 py-3">
+                    <a href="" class="text-[17px] text-yellow-600 border-b-2 border-yellow-600 py-3">
                         Home
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-pink-400 transition-colors duration-150">
+                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
                         Download
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-pink-400 transition-colors duration-150">
+                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
                         Update Log
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-pink-400 transition-colors duration-150">
+                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
                         FAQs
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-pink-400 transition-colors duration-150">
+                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
                         Contact Us
                     </a>
                 </div>
@@ -67,43 +68,43 @@
                         <li
                             class="relative">
                             <!-- language btn -->
-                            <button class="language-button flex items-center space-x-2 border border-gray-600 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-pink-500">
-                                <span href="" class="text-[17px] text-gray-800 transition-colors duration-200 group-hover:text-pink-500">
+                            <button class="language-button flex items-center space-x-2 border border-gray-600 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600">
+                                <span href="" class="text-[17px] text-gray-800 transition-colors duration-200 group-hover:text-yellow-600">
                                     English
                                 </span>
                                 <!-- icon -->
                                 <div class="pt-1">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 group-hover:text-yellow-600" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7"/>
                                     </svg>
                                 </div>
                             </button>
 
                             <!-- language menu -->
-                            <div class="language-menu hidden absolute bg-white right-0 rounded-md text-[17px] px-[18px] py-3">
+                            <div class="language-menu hidden absolute bg-white right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6">
                                 <ul class="space-y-4">
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-pink-400 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
                                             简体中文
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-pink-400 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
                                             русский
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-pink-400 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
                                             Deutsche
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-pink-400 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
                                             français
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-pink-400 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
                                             繁体中文
                                         </a>
                                     </li>
@@ -116,9 +117,9 @@
                 <!-- mobile button -->
                 <div class="lg:hidden flex items-center">
                     <button
-                        class="mobile-button text-pink-600 active:text-pink-300 transition-colors">
+                        class="mobile-button text-yellow-600 active:text-yellow-400 transition-colors">
                         <!-- icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
                         </svg>
                     </button>
@@ -127,7 +128,7 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden relative">
                 <div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-                    <a href="" class="block text-pink-500">Home</a>
+                    <a href="" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
                     <a href="" class="block text-gray-600">Download</a>
                     <a href="" class="block text-gray-600">Update Log</a>
                     <a href="" class="block text-gray-600">FAQs</a>
@@ -166,13 +167,15 @@
             <div
                 class="max-w-full flex flex-col items-center md:block">
                 <!-- logo -->
-                <h1 class="font-logo font-extrabold text-[48px] bg-gradient-to-r from-pink-500 to-purple-500 text-transparent bg-clip-text">PlayCover</h1>
+                <h1 class="font-logo font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
+
+
                 <!-- hero text -->
                 <p class="max-w-sm pt-6 md:pt-0 text-center md:text-left text-lg">an app that allows you to run iOS apps & games on M1 & Intel Mac with mouse, keyboard and controller support.</p>
 
                 <!-- Download buttons -->
                 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 pt-4 md:pt-6">
-                    <a class="py-2 px-4 drop-shadow-md bg-pink-500 text-white hover:bg-pink-400 active:bg-pink-600 transition-colors duration-400 rounded-md cursor-pointer" href="">
+                    <a class="py-2 px-4 drop-shadow-md bg-yellow-500 text-white hover:bg-yellow-400 active:bg-pink-600 transition-colors duration-400 rounded-md cursor-pointer" href="">
                         Download for M1 Mac
                     </a>
                     <a class="py-2 px-4 drop-shadow-md bg-gray-50 text-gray-800 hover:bg-white active:bg-gray-100 transition-colors duration-400 rounded-md cursor-pointer" href="">
@@ -194,8 +197,10 @@
             <div
                 class="flex justify-between max-w-7xl mx-auto pt-8 pl-6 pr-10 flex-col md:flex-row">
                 <!-- text -->
-                <div class="md:pl-2">
-                    <h1 class="font-logo font-extrabold text-lg bg-gradient-to-r from-pink-500 to-purple-500 text-transparent bg-clip-text">PlayCover</h1>
+                <div
+                    class="md:pl-2">
+                    <!-- logo -->
+                    <h1 class="font-logo font-extrabold text-2xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
                     <p class="max-w-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, temporibus! Corrupti, obcaecati. Cupiditate, dolores minus nam ea possimus, harum optio facere aperiam natus aut tenetur aspernatur. Provident iusto cupiditate pariatur eveniet, vitae modi corporis odio excepturi quasi voluptatum repellat, corrupti, eum eaque atque ullam commodi temporibus. Dolore vitae illo nisi?</p>
                 </div>
                 <!-- links -->
