--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
     </head>
 
     <body
-        class="bg-gray-100 dark:bg-[#1E1E1E] transition-colors duration-200 ease-out font-montserrat">
-
-
+        class="bg-gray-100 dark:bg-[#1E1E1E] font-montserrat">
         <!-- nav bar -->
         <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] filter drop-shadow-md z-20">
 
@@ -130,17 +128,28 @@
                     </button>
                 </div>
 
-                <!-- mobile dark mode toggle -->
-
-                <!-- mobile button -->
-                <div class="xl:hidden flex items-center">
+                <!-- mobile buttons -->
+                <div
+                    class="xl:hidden flex items-center space-x-3">
+                    <!-- dark theme button -->
                     <button
-                        class="mobile-button text-yellow-600 active:text-yellow-400 transition-colors">
-                        <!-- icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
-                        </svg>
+                        class="switch-theme-mobile">
+                        <!-- dark icon -->
+                        <svg class="dark:hidden h-8 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
+
+                        <!-- light icon -->
+                        <img class="hidden dark:inline h-6" src="assets/sun.svg" alt="">
                     </button>
+                    <!-- nav button -->
+                    <div class="flex items-center">
+                        <button
+                            class="mobile-button text-yellow-600 active:text-yellow-400 transition-colors">
+                            <!-- icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
             <!-- mobile menu -->
@@ -264,7 +273,7 @@
 
         <!-- js -->
         <script src="js/language-button.js"></script>
-        <script src="js/mobile-button.js"></script>
+        <script src="js/mobile-buttons.js"></script>
         <script src="js/dark-mode.js"></script>
         <script src="js/local-storage-track.js"></script>
     </body>
