--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,9 @@
     </head>
 
     <body
-        class="bg-gray-100 dark:bg-[#1E1E1E] font-montserrat">
+        class="bg-gray-100 dark:bg-[#1E1E1E] font-montserrat transition duration-200 ease-in-out">
         <!-- nav bar -->
-        <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] filter drop-shadow-md z-20">
-
+        <nav class="max-w-screen-2xl px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
             <div
                 class="flex justify-between">
                 <!-- logo -->
@@ -38,19 +37,20 @@
 
                 <!-- primary nav -->
                 <div class="hidden xl:flex items-center space-x-10 pt-1">
-                    <a href="" class="text-[17px] text-yellow-600 border-b-2 border-yellow-600 py-3">
+
+                    <a href="" class="text-[17px] text-yellow-500 border-b-2 border-yellow-600 py-3">
                         Home
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
+                    <a href="" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
                         Download
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
+                    <a href="" class="text-gray-800 dark:text-gray-300 text-[17px]  hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
                         Update Log
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
+                    <a href="" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
                         FAQs
                     </a>
-                    <a href="" class="text-gray-800 text-[17px] hover:text-yellow-500 transition-colors duration-150">
+                    <a href="" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
                         Contact Us
                     </a>
                 </div>
@@ -60,8 +60,9 @@
                     class="hidden xl:flex items-center space-x-5">
 
                     <!-- donate button -->
-                    <button class="border border-gold rounded-md px-3 py-1 hover:border-gold-light transition-colors duration-200 group">
-                        <a href="" class="text-[17px] text-gold group-hover:text-gold-light transition-colors duration-200">
+                    <button class="border border-gold dark:border-[#c7a246] rounded-md px-3 py-1 hover:border-gold-light dark:hover:border-gold-light transition-colors duration-200 group">
+
+                        <a href="" class="text-[17px] text-gold dark:text-[#c7a246] group-hover:text-gold-light dark:group-hover:text-gold-light transition-colors duration-200">
                             Donate
                         </a>
                     </button>
@@ -71,44 +72,49 @@
                         <li
                             class="relative">
                             <!-- language btn -->
-                            <button class="language-button flex items-center space-x-1 border border-gray-600 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600">
-                                <span href="" class="text-[17px] text-gray-800 transition-colors duration-200 group-hover:text-yellow-600">
+                            <button class="language-button flex items-center space-x-1 border border-gray-600 dark:border-gray-300 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
+                                <span href="" class="text-[17px] text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500">
                                     English
                                 </span>
                                 <!-- icon -->
-                                <div class="language-menu-icon transform transition-transform duration-300 group hover:animate-bounce">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 group-hover:text-yellow-600" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                <div class="language-menu-icon transform transition-transform duration-300">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition-colors duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7"/>
                                     </svg>
                                 </div>
                             </button>
 
                             <!-- language menu -->
-                            <div class="language-menu absolute bg-white right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6 transform transition-all duration-300 scale-0 opacity-0 -translate-y-2/4 ease-out">
-
+                            <div
+                                class="language-menu absolute bg-white dark:bg-[#141414] right-0 rounded-md text-[17px] px-[18px] pb-3 pt-6 transform transition-all duration-300 scale-0 opacity-0 -translate-y-2/4 ease-out">
+                                <!-- text -->
                                 <ul class="space-y-4">
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200">
                                             简体中文
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200">
+
                                             русский
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200">
+
                                             Deutsche
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200">
+
                                             français
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="text-gray-700 hover:text-yellow-500 transition-colors duration-200">
+                                        <a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200">
                                             繁体中文
                                         </a>
                                     </li>
@@ -119,9 +125,10 @@
 
                     <!-- light/dark theme button -->
                     <button
-                        class="switch-theme">
+                        class="switch-theme hover:scale-125 transition ease-out duration-500">
                         <!-- dark icon -->
-                        <svg class="dark:hidden h-9 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
+                        <svg class="dark:hidden h-8 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
+
 
                         <!-- light icon -->
                         <img class="hidden dark:inline h-8" src="assets/sun.svg" alt="">
@@ -130,7 +137,7 @@
 
                 <!-- mobile buttons -->
                 <div
-                    class="xl:hidden flex items-center space-x-3">
+                    class="xl:hidden flex items-center space-x-4">
                     <!-- dark theme button -->
                     <button
                         class="switch-theme-mobile">
@@ -138,7 +145,7 @@
                         <svg class="dark:hidden h-8 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
 
                         <!-- light icon -->
-                        <img class="hidden dark:inline h-6" src="assets/sun.svg" alt="">
+                        <img class="hidden dark:inline h-7" src="assets/sun.svg" alt="">
                     </button>
                     <!-- nav button -->
                     <div class="flex items-center">
@@ -196,7 +203,7 @@
                 id="hero-text" class="flex flex-col space-y-6">
                 <!-- intro text -->
                 <div
-                    id="intro-text" class="max-w-full flex flex-col items-center md:block">
+                    id="intro-text" class="max-w-full flex flex-col items-center md:block dark:text-gray-300">
                     <!-- logo -->
                     <h1 class="font-extrabold text-[48px] bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">PlayCover</h1>
 
@@ -205,18 +212,22 @@
 
                     <!-- Download buttons -->
                     <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 pt-4 lg:pt-6 text-center">
-                        <a class="py-2 px-4 drop-shadow-md bg-yellow-500 text-white hover:bg-yellow-400 active:bg-pink-600 transition-colors duration-400 rounded-md cursor-pointer" href="">
+                        <a class="py-2 px-4 drop-shadow-md bg-yellow-500 dark:bg-yellow-600 text-white dark:text-gray-200 hover:bg-yellow-400 hover:hover:bg-yellow-500 active:bg-yellow-700 dark:active:bg-yellow-700 transition-colors duration-400 rounded-md cursor-pointer" href="">
                             Download for M1 Mac
                         </a>
-                        <a class="py-2 px-4 drop-shadow-md bg-gray-50 text-gray-800 hover:bg-white active:bg-gray-100 transition-colors duration-400 rounded-md cursor-pointer" href="">
+                        <a class="py-2 px-4 drop-shadow-md bg-gray-50 dark:bg-[#3f3f3f] text-gray-800 dark:text-gray-200 hover:bg-white dark:hover:bg-[#505050] active:bg-gray-100 dark:active:bg-[#2e2e2e] transition-colors duration-400 rounded-md cursor-pointer" href="">
+
                             Download for Intel Mac
                         </a>
                     </div>
                 </div>
 
                 <!-- build text -->
-                <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 hover:border-transparent hover:shadow-lg hover:bg-white transition-all duration-300">
-                    <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 group-hover:text-gray-800 transition-all duration-300 relative">
+                <div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#444444] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+
+                    <div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+
+
                         <p class="font-semibold text-lg">Latest Build Info</p>
                         <br>
                         <p>Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build Latest Build</p>
