--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 <!-- primary nav -->
                 <div class="hidden xl:flex items-center space-x-10 pt-1">
 
-                    <a href="" class="text-[17px] text-yellow-500 border-b-2 border-yellow-600 py-3">
+                    <a href="" class="text-[17px] text-yellow-500 border-b-2 border-yellow-500 py-3">
                         Home
                     </a>
                     <a href="" class="text-gray-800 dark:text-gray-300 text-[17px] hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">
@@ -125,7 +125,7 @@
 
                     <!-- light/dark theme button -->
                     <button
-                        class="switch-theme hover:scale-125 transition ease-out duration-500">
+                        class="switch-theme hover:scale-125 transition ease-out w-9 h-9 duration-500">
                         <!-- dark icon -->
                         <svg class="dark:hidden h-8 text-gray-700" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" fill="#374151"/></svg>
 
@@ -244,7 +244,7 @@
 
         <!-- footer-->
         <footer
-            class="bg-white text-gray-500">
+            class="bg-white dark:bg-[#141414] text-gray-500 dark:text-gray-300">
 
             <!-- above line -->
             <div
@@ -277,7 +277,7 @@
             <div class="container px-6 pb-4 mx-auto">
                 <hr class="h-px my-6 bg-gray-300 border-none"/>
                 <div>
-                    <p class="text-center text-gray-500">© PlayCover 2021 - All rights reserved</p>
+                    <p class="text-center text-gray-500 dark:text-gray-300">© PlayCover 2021 - All rights reserved</p>
                 </div>
             </div>
         </footer>
