--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -120,10 +120,10 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
+					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Update Log</a>
-					<a href="" class="block text-gray-600 dark:text-gray-300">FAQs</a>
+					<a href="faq/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">FAQ</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
@@ -156,12 +156,12 @@
 		<main class="pb-16">
 			<header class="pt-36 pb-2 flex justify-center"><span class="font-semibold text-5xl text-gray-700 dark:text-gray-300 transition duration-200">Frequently asked questions</span></header>
 
-			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-lg">
+			<section class="w-screen flex flex-col items-center pt-16 space-y-14 text-md xl:text-lg">
 				<!-- question -->
-				<div class="question flex flex-col items-center space-y-8">
+				<div class="question flex flex-col items-center space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 w-[68rem] min-h-[4rem] font-semibold rounded-md border-2 border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
-						<p class="max-w-[61rem] py-3">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either!</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-5 xl:w-[68rem] min-h-[4rem] font-semibold rounded-md border-2 border-gray-500 dark:border-[#555555] bg-gray-50 dark:bg-[#242424] shadow dark:shadow transition duration-200 cursor-pointer">
+						<p class="xl:max-w-[61rem] py-3">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either!</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -170,9 +170,10 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							You could either: <br />
+							<br />
 							1. Delete and reinstall the app with 'clear app cache' checked. <br />
 							2. Run the following command to remove the .plist file which contains keybindings settings:
 						</p>
