--- a/public/index.html
+++ b/public/index.html
@@ -120,10 +120,10 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
+					<a href="../" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Update Log</a>
-					<a href="" class="block text-gray-600 dark:text-gray-300">FAQs</a>
+					<a href="faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="" class="block text-gray-600 dark:text-gray-300">Contact Us</a>
 
 					<!-- mobile language button -->
